asgn3/bin/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> Goal
Rule 1     Goal -> Program
Rule 2     Program -> PROGRAM ID SEMICOLON Block
Rule 3     Program -> PROGRAM ID LPAREN IdentList RPAREN SEMICOLON Block
Rule 4     Block -> DeclSection CompoundStmt
Rule 5     DeclSection -> DeclSection WhichSection
Rule 6     DeclSection -> <empty>
Rule 7     WhichSection -> ConstSection
Rule 8     WhichSection -> TypeSection
Rule 9     WhichSection -> VarSection
Rule 10    WhichSection -> ProcedureDeclSection
Rule 11    CompoundStmt -> BEGIN StmtList END SEMICOLON
Rule 12    StmtList -> Statement StmtList
Rule 13    StmtList -> Statement
Rule 14    Statement -> SimpleStatement SEMICOLON
Rule 15    Statement -> StructStmt
Rule 16    SimpleStatement -> Designator
Rule 17    SimpleStatement -> Designator LPAREN ExprList RPAREN
Rule 18    SimpleStatement -> Designator ASSIGNTO Expression
Rule 19    SimpleStatement -> INHERITED
Rule 20    SimpleStatement -> LPAREN Expression RPAREN
Rule 21    SimpleStatement -> BREAK
Rule 22    SimpleStatement -> CONTINUE
Rule 23    StructStmt -> CompoundStmt
Rule 24    StructStmt -> ConditionalStmt
Rule 25    StructStmt -> LoopStmt
Rule 26    ConditionalStmt -> IfStmt
Rule 27    ConditionalStmt -> CaseStmt
Rule 28    IfStmt -> IF Expression THEN CompoundStmt ELSE CompoundStmt
Rule 29    IfStmt -> IF Expression THEN CompoundStmt
Rule 30    CaseStmt -> CASE Expression OF CaseSelector ColonCaseSelector END
Rule 31    CaseStmt -> CASE Expression OF CaseSelector ColonCaseSelector ELSE CompoundStmt SEMICOLON END
Rule 32    ColonCaseSelector -> ColonCaseSelector SEMICOLON CaseSelector
Rule 33    ColonCaseSelector -> <empty>
Rule 34    CaseSelector -> CaseLabel COLON Statement
Rule 35    CaseLabel -> NUMBER
Rule 36    LoopStmt -> RepeatStmt
Rule 37    LoopStmt -> WhileStmt
Rule 38    RepeatStmt -> REPEAT Statement UNTIL Expression SEMICOLON
Rule 39    WhileStmt -> WHILE Expression DO CompoundStmt
Rule 40    Expression -> SimpleExpression RelSimpleStar
Rule 41    Expression -> LambFunc
Rule 42    RelSimpleStar -> RelOp SimpleExpression RelSimpleStar
Rule 43    RelSimpleStar -> <empty>
Rule 44    SimpleExpression -> PLUS Term AddTermStar
Rule 45    SimpleExpression -> MINUS Term AddTermStar
Rule 46    SimpleExpression -> Term AddTermStar
Rule 47    AddTermStar -> AddOp Term AddTermStar
Rule 48    AddTermStar -> <empty>
Rule 49    Term -> Factor MulFacStar
Rule 50    MulFacStar -> MulOp Factor MulFacStar
Rule 51    MulFacStar -> <empty>
Rule 52    Factor -> Designator
Rule 53    Factor -> Designator LPAREN ExprList RPAREN
Rule 54    Factor -> USERSTRING
Rule 55    Factor -> NUMBER
Rule 56    Factor -> LPAREN Expression RPAREN
Rule 57    Factor -> NOT Factor
Rule 58    Factor -> INHERITED Designator
Rule 59    Factor -> INHERITED
Rule 60    Factor -> TypeID LPAREN Expression RPAREN
Rule 61    Type -> TypeID
Rule 62    Type -> SimpleType
Rule 63    Type -> PointerType
Rule 64    Type -> StringType
Rule 65    Type -> ProcedureType
Rule 66    Type -> Array
Rule 67    Type -> ID
Rule 68    SimpleType -> DOUBLE
Rule 69    PointerType -> POWER ID
Rule 70    StringType -> STRING
Rule 71    ProcedureType -> ProcedureHeading
Rule 72    ProcedureType -> FuncHeading
Rule 73    TypeArgs -> LPAREN TypeID RPAREN
Rule 74    TypeArgs -> LPAREN STRING RPAREN
Rule 75    TypeID -> INTEGER
Rule 76    TypeID -> REAL
Rule 77    TypeID -> CHAR
Rule 78    TypeSection -> TYPE ColonTypeDecl
Rule 79    ColonTypeDecl -> ColonTypeDecl TypeDecl SEMICOLON
Rule 80    ColonTypeDecl -> TypeDecl SEMICOLON
Rule 81    TypeDecl -> ID EQUALS Type
Rule 82    TypeDecl -> ID EQUALS RestrictedType
Rule 83    TypeDecl -> ID EQUALS TYPE Type
Rule 84    TypeDecl -> ID EQUALS TYPE RestrictedType
Rule 85    RestrictedType -> ObjectType
Rule 86    RestrictedType -> ClassType
Rule 87    RelOp -> LANGLE
Rule 88    RelOp -> RANGLE
Rule 89    RelOp -> GEQ
Rule 90    RelOp -> LEQ
Rule 91    RelOp -> NOTEQUALS
Rule 92    RelOp -> EQUALS
Rule 93    AddOp -> PLUS
Rule 94    AddOp -> MINUS
Rule 95    AddOp -> OR
Rule 96    AddOp -> XOR
Rule 97    MulOp -> MULTIPLY
Rule 98    MulOp -> DIVIDE
Rule 99    MulOp -> DIV
Rule 100   MulOp -> MOD
Rule 101   MulOp -> AND
Rule 102   MulOp -> SHL
Rule 103   MulOp -> SHR
Rule 104   MulOp -> DOUBLESTAR
Rule 105   CommaExpression -> CommaExpression COMMA Expression
Rule 106   CommaExpression -> <empty>
Rule 107   ExprList -> Expression CommaExpression
Rule 108   Designator -> ID DesSubEleStar
Rule 109   DesSubEleStar -> DesSubEleStar DesignatorSubElem
Rule 110   DesSubEleStar -> <empty>
Rule 111   DesignatorSubElem -> DOT ID
Rule 112   DesignatorSubElem -> LSQUARE ExprList RSQUARE
Rule 113   DesignatorSubElem -> POWER
Rule 114   ConstSection -> CONSTANT ColonConstDecl
Rule 115   ColonConstDecl -> ColonConstDecl ConstDecl SEMICOLON
Rule 116   ColonConstDecl -> ConstDecl SEMICOLON
Rule 117   ConstDecl -> ID EQUALS ConstExpr
Rule 118   ConstDecl -> ID COLON TypeID EQUALS TypedConst
Rule 119   TypedConst -> ConstExpr
Rule 120   TypedConst -> ArrayConst
Rule 121   Array -> ARRAY LSQUARE ArrayBetween RSQUARE OF TypeArray
Rule 122   ArrayBetween -> NUMBER DOT DOT NUMBER
Rule 123   ArrayBetween -> NUMBER DOT DOT ID
Rule 124   ArrayBetween -> ID DOT DOT ID
Rule 125   ArrayBetween -> ID DOT DOT NUMBER
Rule 126   TypeArray -> TypeID
Rule 127   TypeArray -> PointerType
Rule 128   ArrayConst -> LPAREN TypedConst CommaTypedConst RPAREN
Rule 129   CommaTypedConst -> COMMA TypedConst CommaTypedConst
Rule 130   CommaTypedConst -> <empty>
Rule 131   ConstExpr -> NUMBER
Rule 132   IdentList -> ID TypeArgs CommaIDTypeArgs
Rule 133   IdentList -> ID CommaIDTypeArgs
Rule 134   CommaIDTypeArgs -> COMMA ID TypeArgs CommaIDTypeArgs
Rule 135   CommaIDTypeArgs -> COMMA ID CommaIDTypeArgs
Rule 136   CommaIDTypeArgs -> <empty>
Rule 137   ParamIdentList -> ParamIdent SEMICOLON ParamIdentList
Rule 138   ParamIdentList -> ParamIdent
Rule 139   ParamIdentList -> <empty>
Rule 140   ParamIdent -> IdentList COLON Type
Rule 141   ParamIdent -> IdentList
Rule 142   VarSection -> VAR ColonVarDecl
Rule 143   ColonVarDecl -> ColonVarDecl VarDecl SEMICOLON
Rule 144   ColonVarDecl -> VarDecl SEMICOLON
Rule 145   VarDecl -> IdentList COLON Type
Rule 146   ProcedureDeclSection -> ProcedureDecl
Rule 147   ProcedureDeclSection -> FuncDecl
Rule 148   ProcedureDeclSection -> ConstrucDecl
Rule 149   ConstrucDecl -> ConstrucHeading SEMICOLON Block
Rule 150   ConstrucHeading -> CONSTRUCTOR Designator FormalParams
Rule 151   ConstrucHeadingSemicolon -> CONSTRUCTOR Designator FormalParams SEMICOLON
Rule 152   FuncDecl -> FuncHeading SEMICOLON Block
Rule 153   FuncHeading -> FUNCTION Designator FormalParams COLON Type
Rule 154   FuncHeadingSemicolon -> FUNCTION Designator FormalParams COLON Type SEMICOLON
Rule 155   FormalParams -> LPAREN ParamIdentList RPAREN
Rule 156   FormalParams -> <empty>
Rule 157   ProcedureDecl -> ProcedureHeading SEMICOLON Block
Rule 158   ProcedureHeading -> PROCEDURE Designator FormalParams
Rule 159   ProcedureHeadingSemicolon -> PROCEDURE Designator FormalParams SEMICOLON
Rule 160   LambFunc -> LAMBDA ID COLON SimpleExpression
Rule 161   ObjectType -> OBJECT ObjectHeritage ObjectVis ObjectBody END
Rule 162   ObjectHeritage -> LPAREN IdentList RPAREN
Rule 163   ObjectHeritage -> <empty>
Rule 164   ObjectBody -> ObjectBody ObjectTypeSection ObjectVarSection ObjectConstSection ObjectMethodList
Rule 165   ObjectBody -> <empty>
Rule 166   ObjectVis -> PUBLIC
Rule 167   ObjectVis -> <empty>
Rule 168   ObjectVarSection -> ColonVarDecl
Rule 169   ObjectVarSection -> <empty>
Rule 170   ObjectTypeSection -> ColonTypeDecl
Rule 171   ObjectTypeSection -> <empty>
Rule 172   ObjectConstSection -> ColonConstDecl
Rule 173   ObjectConstSection -> <empty>
Rule 174   ObjectMethodList -> ObjectMethodHeading
Rule 175   ObjectMethodList -> <empty>
Rule 176   ObjectMethodHeading -> ProcedureHeadingSemicolon
Rule 177   ObjectMethodHeading -> FuncHeadingSemicolon
Rule 178   ObjectMethodHeading -> ConstrucHeadingSemicolon
Rule 179   ClassType -> CLASS ClassHeritage ClassVis ClassBody END
Rule 180   ClassHeritage -> LPAREN IdentList RPAREN
Rule 181   ClassHeritage -> <empty>
Rule 182   ClassBody -> ClassBody ClassTypeSection ClassConstSection ClassVarSection ClassMethodList
Rule 183   ClassBody -> <empty>
Rule 184   ClassVis -> PUBLIC
Rule 185   ClassVis -> <empty>
Rule 186   ClassTypeSection -> ColonTypeDecl
Rule 187   ClassTypeSection -> <empty>
Rule 188   ClassConstSection -> ColonConstDecl
Rule 189   ClassConstSection -> <empty>
Rule 190   ClassVarSection -> ColonVarDecl
Rule 191   ClassVarSection -> <empty>
Rule 192   ClassMethodList -> ClassMethodHeading
Rule 193   ClassMethodList -> <empty>
Rule 194   ClassMethodHeading -> ProcedureHeadingSemicolon
Rule 195   ClassMethodHeading -> FuncHeadingSemicolon
Rule 196   ClassMethodHeading -> ConstrucHeadingSemicolon

Terminals, with rules where they appear

AND                  : 101
ARRAY                : 121
ASSIGNTO             : 18
BEGIN                : 11
BREAK                : 21
CASE                 : 30 31
CHAR                 : 77
CLASS                : 179
COLON                : 34 118 140 145 153 154 160
COMMA                : 105 129 134 135
COMMENT              : 
CONSTANT             : 114
CONSTRUCTOR          : 150 151
CONTINUE             : 22
DIV                  : 99
DIVIDE               : 98
DO                   : 39
DOT                  : 111 122 122 123 123 124 124 125 125
DOUBLE               : 68
DOUBLESTAR           : 104
ELSE                 : 28 31
END                  : 11 30 31 161 179
EQUALS               : 81 82 83 84 92 117 118
FUNCTION             : 153 154
GEQ                  : 89
ID                   : 2 3 67 69 81 82 83 84 108 111 117 118 123 124 124 125 132 133 134 135 160
IF                   : 28 29
INHERITED            : 19 58 59
INTEGER              : 75
LAMBDA               : 160
LANGLE               : 87
LEQ                  : 90
LPAREN               : 3 17 20 53 56 60 73 74 128 155 162 180
LSQUARE              : 112 121
MINUS                : 45 94
MOD                  : 100
MULTIPLY             : 97
NOT                  : 57
NOTEQUALS            : 91
NUMBER               : 35 55 122 122 123 125 131
OBJECT               : 161
OF                   : 30 31 121
OR                   : 95
PLUS                 : 44 93
POWER                : 69 113
PROCEDURE            : 158 159
PROGRAM              : 2 3
PUBLIC               : 166 184
RANGLE               : 88
REAL                 : 76
REPEAT               : 38
RPAREN               : 3 17 20 53 56 60 73 74 128 155 162 180
RSQUARE              : 112 121
SEMICOLON            : 2 3 11 14 31 32 38 79 80 115 116 137 143 144 149 151 152 154 157 159
SHL                  : 102
SHR                  : 103
STRING               : 70 74
THEN                 : 28 29
TYPE                 : 78 83 84
UNTIL                : 38
USERSTRING           : 54
VAR                  : 142
WHILE                : 39
XOR                  : 96
error                : 

Nonterminals, with rules where they appear

AddOp                : 47
AddTermStar          : 44 45 46 47
Array                : 66
ArrayBetween         : 121
ArrayConst           : 120
Block                : 2 3 149 152 157
CaseLabel            : 34
CaseSelector         : 30 31 32
CaseStmt             : 27
ClassBody            : 179 182
ClassConstSection    : 182
ClassHeritage        : 179
ClassMethodHeading   : 192
ClassMethodList      : 182
ClassType            : 86
ClassTypeSection     : 182
ClassVarSection      : 182
ClassVis             : 179
ColonCaseSelector    : 30 31 32
ColonConstDecl       : 114 115 172 188
ColonTypeDecl        : 78 79 170 186
ColonVarDecl         : 142 143 168 190
CommaExpression      : 105 107
CommaIDTypeArgs      : 132 133 134 135
CommaTypedConst      : 128 129
CompoundStmt         : 4 23 28 28 29 31 39
ConditionalStmt      : 24
ConstDecl            : 115 116
ConstExpr            : 117 119
ConstSection         : 7
ConstrucDecl         : 148
ConstrucHeading      : 149
ConstrucHeadingSemicolon : 178 196
DeclSection          : 4 5
DesSubEleStar        : 108 109
Designator           : 16 17 18 52 53 58 150 151 153 154 158 159
DesignatorSubElem    : 109
ExprList             : 17 53 112
Expression           : 18 20 28 29 30 31 38 39 56 60 105 107
Factor               : 49 50 57
FormalParams         : 150 151 153 154 158 159
FuncDecl             : 147
FuncHeading          : 72 152
FuncHeadingSemicolon : 177 195
Goal                 : 0
IdentList            : 3 140 141 145 162 180
IfStmt               : 26
LambFunc             : 41
LoopStmt             : 25
MulFacStar           : 49 50
MulOp                : 50
ObjectBody           : 161 164
ObjectConstSection   : 164
ObjectHeritage       : 161
ObjectMethodHeading  : 174
ObjectMethodList     : 164
ObjectType           : 85
ObjectTypeSection    : 164
ObjectVarSection     : 164
ObjectVis            : 161
ParamIdent           : 137 138
ParamIdentList       : 137 155
PointerType          : 63 127
ProcedureDecl        : 146
ProcedureDeclSection : 10
ProcedureHeading     : 71 157
ProcedureHeadingSemicolon : 176 194
ProcedureType        : 65
Program              : 1
RelOp                : 42
RelSimpleStar        : 40 42
RepeatStmt           : 36
RestrictedType       : 82 84
SimpleExpression     : 40 42 160
SimpleStatement      : 14
SimpleType           : 62
Statement            : 12 13 34 38
StmtList             : 11 12
StringType           : 64
StructStmt           : 15
Term                 : 44 45 46 47
Type                 : 81 83 140 145 153 154
TypeArgs             : 132 134
TypeArray            : 121
TypeDecl             : 79 80
TypeID               : 60 61 73 118 126
TypeSection          : 8
TypedConst           : 118 128 129
VarDecl              : 143 144
VarSection           : 9
WhichSection         : 5
WhileStmt            : 37

Parsing method: LALR

state 0

    (0) S' -> . Goal
    (1) Goal -> . Program
    (2) Program -> . PROGRAM ID SEMICOLON Block
    (3) Program -> . PROGRAM ID LPAREN IdentList RPAREN SEMICOLON Block

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 3
    Goal                           shift and go to state 1

state 1

    (0) S' -> Goal .



state 2

    (2) Program -> PROGRAM . ID SEMICOLON Block
    (3) Program -> PROGRAM . ID LPAREN IdentList RPAREN SEMICOLON Block

    ID              shift and go to state 4


state 3

    (1) Goal -> Program .

    $end            reduce using rule 1 (Goal -> Program .)


state 4

    (2) Program -> PROGRAM ID . SEMICOLON Block
    (3) Program -> PROGRAM ID . LPAREN IdentList RPAREN SEMICOLON Block

    SEMICOLON       shift and go to state 5
    LPAREN          shift and go to state 6


state 5

    (2) Program -> PROGRAM ID SEMICOLON . Block
    (4) Block -> . DeclSection CompoundStmt
    (5) DeclSection -> . DeclSection WhichSection
    (6) DeclSection -> .

    BEGIN           reduce using rule 6 (DeclSection -> .)
    CONSTANT        reduce using rule 6 (DeclSection -> .)
    TYPE            reduce using rule 6 (DeclSection -> .)
    VAR             reduce using rule 6 (DeclSection -> .)
    PROCEDURE       reduce using rule 6 (DeclSection -> .)
    FUNCTION        reduce using rule 6 (DeclSection -> .)
    CONSTRUCTOR     reduce using rule 6 (DeclSection -> .)

    DeclSection                    shift and go to state 7
    Block                          shift and go to state 8

state 6

    (3) Program -> PROGRAM ID LPAREN . IdentList RPAREN SEMICOLON Block
    (132) IdentList -> . ID TypeArgs CommaIDTypeArgs
    (133) IdentList -> . ID CommaIDTypeArgs

    ID              shift and go to state 10

    IdentList                      shift and go to state 9

state 7

    (4) Block -> DeclSection . CompoundStmt
    (5) DeclSection -> DeclSection . WhichSection
    (11) CompoundStmt -> . BEGIN StmtList END SEMICOLON
    (7) WhichSection -> . ConstSection
    (8) WhichSection -> . TypeSection
    (9) WhichSection -> . VarSection
    (10) WhichSection -> . ProcedureDeclSection
    (114) ConstSection -> . CONSTANT ColonConstDecl
    (78) TypeSection -> . TYPE ColonTypeDecl
    (142) VarSection -> . VAR ColonVarDecl
    (146) ProcedureDeclSection -> . ProcedureDecl
    (147) ProcedureDeclSection -> . FuncDecl
    (148) ProcedureDeclSection -> . ConstrucDecl
    (157) ProcedureDecl -> . ProcedureHeading SEMICOLON Block
    (152) FuncDecl -> . FuncHeading SEMICOLON Block
    (149) ConstrucDecl -> . ConstrucHeading SEMICOLON Block
    (158) ProcedureHeading -> . PROCEDURE Designator FormalParams
    (153) FuncHeading -> . FUNCTION Designator FormalParams COLON Type
    (150) ConstrucHeading -> . CONSTRUCTOR Designator FormalParams

    BEGIN           shift and go to state 17
    CONSTANT        shift and go to state 16
    TYPE            shift and go to state 28
    VAR             shift and go to state 24
    PROCEDURE       shift and go to state 20
    FUNCTION        shift and go to state 22
    CONSTRUCTOR     shift and go to state 12

    FuncHeading                    shift and go to state 18
    WhichSection                   shift and go to state 26
    ConstrucDecl                   shift and go to state 11
    FuncDecl                       shift and go to state 19
    ConstrucHeading                shift and go to state 27
    TypeSection                    shift and go to state 23
    ProcedureDecl                  shift and go to state 13
    ProcedureHeading               shift and go to state 14
    ProcedureDeclSection           shift and go to state 15
    VarSection                     shift and go to state 25
    CompoundStmt                   shift and go to state 29
    ConstSection                   shift and go to state 21

state 8

    (2) Program -> PROGRAM ID SEMICOLON Block .

    $end            reduce using rule 2 (Program -> PROGRAM ID SEMICOLON Block .)


state 9

    (3) Program -> PROGRAM ID LPAREN IdentList . RPAREN SEMICOLON Block

    RPAREN          shift and go to state 30


state 10

    (132) IdentList -> ID . TypeArgs CommaIDTypeArgs
    (133) IdentList -> ID . CommaIDTypeArgs
    (73) TypeArgs -> . LPAREN TypeID RPAREN
    (74) TypeArgs -> . LPAREN STRING RPAREN
    (134) CommaIDTypeArgs -> . COMMA ID TypeArgs CommaIDTypeArgs
    (135) CommaIDTypeArgs -> . COMMA ID CommaIDTypeArgs
    (136) CommaIDTypeArgs -> .

    LPAREN          shift and go to state 34
    COMMA           shift and go to state 33
    RPAREN          reduce using rule 136 (CommaIDTypeArgs -> .)
    COLON           reduce using rule 136 (CommaIDTypeArgs -> .)
    SEMICOLON       reduce using rule 136 (CommaIDTypeArgs -> .)

    CommaIDTypeArgs                shift and go to state 31
    TypeArgs                       shift and go to state 32

state 11

    (148) ProcedureDeclSection -> ConstrucDecl .

    BEGIN           reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)
    CONSTANT        reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)
    TYPE            reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)
    VAR             reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)
    PROCEDURE       reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)
    FUNCTION        reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)
    CONSTRUCTOR     reduce using rule 148 (ProcedureDeclSection -> ConstrucDecl .)


state 12

    (150) ConstrucHeading -> CONSTRUCTOR . Designator FormalParams
    (108) Designator -> . ID DesSubEleStar

    ID              shift and go to state 36

    Designator                     shift and go to state 35

state 13

    (146) ProcedureDeclSection -> ProcedureDecl .

    BEGIN           reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)
    CONSTANT        reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)
    TYPE            reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)
    VAR             reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)
    PROCEDURE       reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)
    FUNCTION        reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)
    CONSTRUCTOR     reduce using rule 146 (ProcedureDeclSection -> ProcedureDecl .)


state 14

    (157) ProcedureDecl -> ProcedureHeading . SEMICOLON Block

    SEMICOLON       shift and go to state 37


state 15

    (10) WhichSection -> ProcedureDeclSection .

    BEGIN           reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    CONSTANT        reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    TYPE            reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    VAR             reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    PROCEDURE       reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    FUNCTION        reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    CONSTRUCTOR     reduce using rule 10 (WhichSection -> ProcedureDeclSection .)


state 16

    (114) ConstSection -> CONSTANT . ColonConstDecl
    (115) ColonConstDecl -> . ColonConstDecl ConstDecl SEMICOLON
    (116) ColonConstDecl -> . ConstDecl SEMICOLON
    (117) ConstDecl -> . ID EQUALS ConstExpr
    (118) ConstDecl -> . ID COLON TypeID EQUALS TypedConst

    ID              shift and go to state 40

    ConstDecl                      shift and go to state 39
    ColonConstDecl                 shift and go to state 38

state 17

    (11) CompoundStmt -> BEGIN . StmtList END SEMICOLON
    (12) StmtList -> . Statement StmtList
    (13) StmtList -> . Statement
    (14) Statement -> . SimpleStatement SEMICOLON
    (15) Statement -> . StructStmt
    (16) SimpleStatement -> . Designator
    (17) SimpleStatement -> . Designator LPAREN ExprList RPAREN
    (18) SimpleStatement -> . Designator ASSIGNTO Expression
    (19) SimpleStatement -> . INHERITED
    (20) SimpleStatement -> . LPAREN Expression RPAREN
    (21) SimpleStatement -> . BREAK
    (22) SimpleStatement -> . CONTINUE
    (23) StructStmt -> . CompoundStmt
    (24) StructStmt -> . ConditionalStmt
    (25) StructStmt -> . LoopStmt
    (108) Designator -> . ID DesSubEleStar
    (11) CompoundStmt -> . BEGIN StmtList END SEMICOLON
    (26) ConditionalStmt -> . IfStmt
    (27) ConditionalStmt -> . CaseStmt
    (36) LoopStmt -> . RepeatStmt
    (37) LoopStmt -> . WhileStmt
    (28) IfStmt -> . IF Expression THEN CompoundStmt ELSE CompoundStmt
    (29) IfStmt -> . IF Expression THEN CompoundStmt
    (30) CaseStmt -> . CASE Expression OF CaseSelector ColonCaseSelector END
    (31) CaseStmt -> . CASE Expression OF CaseSelector ColonCaseSelector ELSE CompoundStmt SEMICOLON END
    (38) RepeatStmt -> . REPEAT Statement UNTIL Expression SEMICOLON
    (39) WhileStmt -> . WHILE Expression DO CompoundStmt

    INHERITED       shift and go to state 52
    LPAREN          shift and go to state 51
    BREAK           shift and go to state 56
    CONTINUE        shift and go to state 57
    ID              shift and go to state 36
    BEGIN           shift and go to state 17
    IF              shift and go to state 53
    CASE            shift and go to state 45
    REPEAT          shift and go to state 54
    WHILE           shift and go to state 55

    WhileStmt                      shift and go to state 50
    StmtList                       shift and go to state 43
    Designator                     shift and go to state 46
    IfStmt                         shift and go to state 44
    SimpleStatement                shift and go to state 42
    CompoundStmt                   shift and go to state 60
    LoopStmt                       shift and go to state 47
    Statement                      shift and go to state 41
    StructStmt                     shift and go to state 58
    RepeatStmt                     shift and go to state 59
    CaseStmt                       shift and go to state 48
    ConditionalStmt                shift and go to state 49

state 18

    (152) FuncDecl -> FuncHeading . SEMICOLON Block

    SEMICOLON       shift and go to state 61


state 19

    (147) ProcedureDeclSection -> FuncDecl .

    BEGIN           reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)
    CONSTANT        reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)
    TYPE            reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)
    VAR             reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)
    PROCEDURE       reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)
    FUNCTION        reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)
    CONSTRUCTOR     reduce using rule 147 (ProcedureDeclSection -> FuncDecl .)


state 20

    (158) ProcedureHeading -> PROCEDURE . Designator FormalParams
    (108) Designator -> . ID DesSubEleStar

    ID              shift and go to state 36

    Designator                     shift and go to state 62

state 21

    (7) WhichSection -> ConstSection .

    BEGIN           reduce using rule 7 (WhichSection -> ConstSection .)
    CONSTANT        reduce using rule 7 (WhichSection -> ConstSection .)
    TYPE            reduce using rule 7 (WhichSection -> ConstSection .)
    VAR             reduce using rule 7 (WhichSection -> ConstSection .)
    PROCEDURE       reduce using rule 7 (WhichSection -> ConstSection .)
    FUNCTION        reduce using rule 7 (WhichSection -> ConstSection .)
    CONSTRUCTOR     reduce using rule 7 (WhichSection -> ConstSection .)


state 22

    (153) FuncHeading -> FUNCTION . Designator FormalParams COLON Type
    (108) Designator -> . ID DesSubEleStar

    ID              shift and go to state 36

    Designator                     shift and go to state 63

state 23

    (8) WhichSection -> TypeSection .

    BEGIN           reduce using rule 8 (WhichSection -> TypeSection .)
    CONSTANT        reduce using rule 8 (WhichSection -> TypeSection .)
    TYPE            reduce using rule 8 (WhichSection -> TypeSection .)
    VAR             reduce using rule 8 (WhichSection -> TypeSection .)
    PROCEDURE       reduce using rule 8 (WhichSection -> TypeSection .)
    FUNCTION        reduce using rule 8 (WhichSection -> TypeSection .)
    CONSTRUCTOR     reduce using rule 8 (WhichSection -> TypeSection .)


state 24

    (142) VarSection -> VAR . ColonVarDecl
    (143) ColonVarDecl -> . ColonVarDecl VarDecl SEMICOLON
    (144) ColonVarDecl -> . VarDecl SEMICOLON
    (145) VarDecl -> . IdentList COLON Type
    (132) IdentList -> . ID TypeArgs CommaIDTypeArgs
    (133) IdentList -> . ID CommaIDTypeArgs

    ID              shift and go to state 10

    ColonVarDecl                   shift and go to state 64
    IdentList                      shift and go to state 65
    VarDecl                        shift and go to state 66

state 25

    (9) WhichSection -> VarSection .

    BEGIN           reduce using rule 9 (WhichSection -> VarSection .)
    CONSTANT        reduce using rule 9 (WhichSection -> VarSection .)
    TYPE            reduce using rule 9 (WhichSection -> VarSection .)
    VAR             reduce using rule 9 (WhichSection -> VarSection .)
    PROCEDURE       reduce using rule 9 (WhichSection -> VarSection .)
    FUNCTION        reduce using rule 9 (WhichSection -> VarSection .)
    CONSTRUCTOR     reduce using rule 9 (WhichSection -> VarSection .)


state 26

    (5) DeclSection -> DeclSection WhichSection .

    BEGIN           reduce using rule 5 (DeclSection -> DeclSection WhichSection .)
    CONSTANT        reduce using rule 5 (DeclSection -> DeclSection WhichSection .)
    TYPE            reduce using rule 5 (DeclSection -> DeclSection WhichSection .)
    VAR             reduce using rule 5 (DeclSection -> DeclSection WhichSection .)
    PROCEDURE       reduce using rule 5 (DeclSection -> DeclSection WhichSection .)
    FUNCTION        reduce using rule 5 (DeclSection -> DeclSection WhichSection .)
    CONSTRUCTOR     reduce using rule 5 (DeclSection -> DeclSection WhichSection .)


state 27

    (149) ConstrucDecl -> ConstrucHeading . SEMICOLON Block

    SEMICOLON       shift and go to state 67


state 28

    (78) TypeSection -> TYPE . ColonTypeDecl
    (79) ColonTypeDecl -> . ColonTypeDecl TypeDecl SEMICOLON
    (80) ColonTypeDecl -> . TypeDecl SEMICOLON
    (81) TypeDecl -> . ID EQUALS Type
    (82) TypeDecl -> . ID EQUALS RestrictedType
    (83) TypeDecl -> . ID EQUALS TYPE Type
    (84) TypeDecl -> . ID EQUALS TYPE RestrictedType

    ID              shift and go to state 70

    ColonTypeDecl                  shift and go to state 69
    TypeDecl                       shift and go to state 68

state 29

    (4) Block -> DeclSection CompoundStmt .

    BEGIN           reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    CONSTANT        reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    TYPE            reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    VAR             reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    PROCEDURE       reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    FUNCTION        reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    CONSTRUCTOR     reduce using rule 4 (Block -> DeclSection CompoundStmt .)
    $end            reduce using rule 4 (Block -> DeclSection CompoundStmt .)


state 30

    (3) Program -> PROGRAM ID LPAREN IdentList RPAREN . SEMICOLON Block

    SEMICOLON       shift and go to state 71


state 31

    (133) IdentList -> ID CommaIDTypeArgs .

    COLON           reduce using rule 133 (IdentList -> ID CommaIDTypeArgs .)
    SEMICOLON       reduce using rule 133 (IdentList -> ID CommaIDTypeArgs .)
    RPAREN          reduce using rule 133 (IdentList -> ID CommaIDTypeArgs .)


state 32

    (132) IdentList -> ID TypeArgs . CommaIDTypeArgs
    (134) CommaIDTypeArgs -> . COMMA ID TypeArgs CommaIDTypeArgs
    (135) CommaIDTypeArgs -> . COMMA ID CommaIDTypeArgs
    (136) CommaIDTypeArgs -> .

    COMMA           shift and go to state 33
    RPAREN          reduce using rule 136 (CommaIDTypeArgs -> .)
    COLON           reduce using rule 136 (CommaIDTypeArgs -> .)
    SEMICOLON       reduce using rule 136 (CommaIDTypeArgs -> .)

    CommaIDTypeArgs                shift and go to state 72

state 33

    (134) CommaIDTypeArgs -> COMMA . ID TypeArgs CommaIDTypeArgs
    (135) CommaIDTypeArgs -> COMMA . ID CommaIDTypeArgs

    ID              shift and go to state 73


state 34
